// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Snapshot Tests matches snapshot for danger variant 1`] = `
<div>
  <button
    class="btn btn-danger btn-md "
    type="button"
  >
    Delete
  </button>
</div>
`;

exports[`Button Snapshot Tests matches snapshot for large size 1`] = `
<div>
  <button
    class="btn btn-primary btn-lg "
    type="button"
  >
    Large
  </button>
</div>
`;

exports[`Button Snapshot Tests matches snapshot for primary variant 1`] = `
<div>
  <button
    class="btn btn-primary btn-md "
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`Button Snapshot Tests matches snapshot for secondary variant 1`] = `
<div>
  <button
    class="btn btn-secondary btn-md "
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`Button Snapshot Tests matches snapshot for small size 1`] = `
<div>
  <button
    class="btn btn-primary btn-sm "
    type="button"
  >
    Small
  </button>
</div>
`;

exports[`Button Snapshot Tests matches snapshot for success variant 1`] = `
<div>
  <button
    class="btn btn-success btn-md "
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`Button Snapshot Tests matches snapshot when disabled 1`] = `
<div>
  <button
    class="btn btn-primary btn-md "
    disabled=""
    type="button"
  >
    Disabled
  </button>
</div>
`;

exports[`Button Snapshot Tests matches snapshot with custom className 1`] = `
<div>
  <button
    class="btn btn-primary btn-md custom-class"
    type="button"
  >
    Custom Class
  </button>
</div>
`;
